feat: 수정PPT(231122) 작업 1. 횡단보도: 시설물 관리, 카메라 관리 수정 2. 횡단보도: 영상인식 위경도 설정 화면 수정 3. 횡단보도: 영상인식 ROI 설정 > 차량 ROI/보행자 ROI 탭 화면 수정 4. 횡단보도: 영상인식 위경도 설정 > 목록 화면 수정 5. 대시보드: 횡단보도 현황 수정

--- a/base/html/cw/cw_roiset_tab.html
+++ b/base/html/cw/cw_roiset_tab.html
@@ -79,24 +79,28 @@
                   <button type="button" class="lane8">8차로</button>
                 </div>
                 <!-- //lane-choice -->
-                <div class="color-list">
-                  <button type="button" class="color-red"><span class="screen-out">빨강색</span></button>
-                  <button type="button" class="color-orange"><span class="screen-out">주황색</span></button>
-                  <button type="button" class="color-yellow"><span class="screen-out">노랑색</span></button>
-                  <button type="button" class="color-lime"><span class="screen-out">라임색</span></button>
-                  <button type="button" class="color-aqua"><span class="screen-out">아쿠아색</span></button>
-                  <button type="button" class="color-azure"><span class="screen-out">연한파랑색</span></button>
-                  <button type="button" class="color-violet"><span class="screen-out">보라색</span></button>
-                  <button type="button" class="color-pink"><span class="screen-out">분홍색</span></button>
-                  <button type="button" class="color-brown"><span class="screen-out">갈색</span></button>
-                  <button type="button" class="color-green"><span class="screen-out">녹색</span></button>
+                <!-- 231128 color-list와 하단 버튼 그룹화 -->
+                <div class="color-list-group">
+                  <div class="color-list">
+                    <button type="button" class="color-red"><span class="screen-out">빨강색</span></button>
+                    <button type="button" class="color-orange"><span class="screen-out">주황색</span></button>
+                    <button type="button" class="color-yellow"><span class="screen-out">노랑색</span></button>
+                    <button type="button" class="color-lime"><span class="screen-out">라임색</span></button>
+                    <button type="button" class="color-aqua"><span class="screen-out">아쿠아색</span></button>
+                    <button type="button" class="color-azure"><span class="screen-out">연한파랑색</span></button>
+                    <button type="button" class="color-violet"><span class="screen-out">보라색</span></button>
+                    <button type="button" class="color-pink"><span class="screen-out">분홍색</span></button>
+                    <button type="button" class="color-brown"><span class="screen-out">갈색</span></button>
+                    <button type="button" class="color-green"><span class="screen-out">녹색</span></button>
+                  </div>
+                  <!-- //color-list -->
+                  <button type="button" class="roi-set-btn1">진입영역, 직진, 3차로, 빨간색</button>
+                  <button type="button" class="roi-set-btn2">
+                    <em>설정 완료</em>
+                    <span>(현재 점 개수 : 2/10)</span>
+                  </button>
                 </div>
-                <!-- //color-list -->
-                <button type="button" class="roi-set-btn1">진입영역, 직진, 3차로, 빨간색</button>
-                <button type="button" class="roi-set-btn2">
-                  <em>설정 완료</em>
-                  <span>(현재 점 개수 : 2/10)</span>
-                </button>
+                <!-- //color-list-group -->
               </div>
               <!-- //진입 영역 -->
               <div class="ui tab segment" data-tab="road-direction2">
@@ -283,20 +287,24 @@
                   <button type="button">위험영역</button>
                 </div>
                 <!-- //roi-set-area-button-group -->
-                <div class="color-list">
-                  <button type="button" class="color-red"><span class="screen-out">빨강색</span></button>
-                  <button type="button" class="color-orange"><span class="screen-out">주황색</span></button>
-                  <button type="button" class="color-yellow"><span class="screen-out">노랑색</span></button>
-                  <button type="button" class="color-lime"><span class="screen-out">라임색</span></button>
-                  <button type="button" class="color-aqua"><span class="screen-out">아쿠아색</span></button>
-                  <button type="button" class="color-azure"><span class="screen-out">연한파랑색</span></button>
-                  <button type="button" class="color-violet"><span class="screen-out">보라색</span></button>
-                  <button type="button" class="color-pink"><span class="screen-out">분홍색</span></button>
-                  <button type="button" class="color-brown"><span class="screen-out">갈색</span></button>
-                  <button type="button" class="color-green"><span class="screen-out">녹색</span></button>
+                <!-- 231128 color-list와 하단 버튼 그룹화 -->
+                <div class="color-list-group">
+                  <div class="color-list">
+                    <button type="button" class="color-red"><span class="screen-out">빨강색</span></button>
+                    <button type="button" class="color-orange"><span class="screen-out">주황색</span></button>
+                    <button type="button" class="color-yellow"><span class="screen-out">노랑색</span></button>
+                    <button type="button" class="color-lime"><span class="screen-out">라임색</span></button>
+                    <button type="button" class="color-aqua"><span class="screen-out">아쿠아색</span></button>
+                    <button type="button" class="color-azure"><span class="screen-out">연한파랑색</span></button>
+                    <button type="button" class="color-violet"><span class="screen-out">보라색</span></button>
+                    <button type="button" class="color-pink"><span class="screen-out">분홍색</span></button>
+                    <button type="button" class="color-brown"><span class="screen-out">갈색</span></button>
+                    <button type="button" class="color-green"><span class="screen-out">녹색</span></button>
+                  </div>
+                  <button type="button" class="roi-set-btn1">방위, A방위, 남, 검지영역, 빨간색</button>
+                  <button type="button" class="roi-set-btn2"><em>ROI 설정</em></button>
                 </div>
-                <button type="button" class="roi-set-btn1">방위, A방위, 남, 검지영역, 빨간색</button>
-                <button type="button" class="roi-set-btn2"><em>ROI 설정</em></button>
+                <!-- //color-list-group -->
               </div>
               <!-- //횡단보도 -->
 
