--- a/base/html/cw/facility_manag.html
+++ b/base/html/cw/facility_manag.html
@@ -52,6 +52,10 @@
                   </select>
                 </div>
                 <!-- //selectbox-wrap -->
+                <!-- 231128 추가 -->
+                <div class="ui input md label-none" style="width: 280px">
+                  <input type="text" placeholder="시설물 ID 또는 시설물" />
+                </div>
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
