--- a/base/html/cw/position_set.html
+++ b/base/html/cw/position_set.html
@@ -35,15 +35,16 @@
           <!-- //right -->
         </div>
         <!-- //roi-view-header -->
-        <div class="ui top attached tabular menu rounded">
+        <!-- <div class="ui top attached tabular menu rounded"> 231128 삭제
           <a href="#none;" class="item active" data-tab="first">카메라 위경도 설정</a>
-        </div>
+        </div> -->
         <!-- //menu -->
 
         <div class="ui bottom attached tab segment active" data-tab="first">
           <section class="perceive-section">
             <div class="perceive-header">
-              <h3>위경도 설정</h3>
+              <!-- 231128 텍스트 변경 -->
+              <h3>카메라 위경도 설정</h3>
             </div>
             <!-- //perceive-header -->
             <div class="perceive-body">
@@ -225,7 +226,7 @@
 
         <div class="ui buttons basic">
           <a href="#" class="btn-third">지점 상세 화면</a>
-          <a href="#" class="btn-third">ROI 목록 화면</a>
+          <a href="#" class="btn-third">위경도 목록 화면</a>
         </div>
         <!-- //buttons -->
       </div>
