--- a/base/html/cw/position_set_list.html
+++ b/base/html/cw/position_set_list.html
@@ -73,6 +73,7 @@
                   <col />
                   <col />
                 </colgroup>
+                <!-- 231128 카메라 위치 항목 추가 및 수정일시 항목 삭제 -->
                 <thead>
                   <tr>
                     <th>No</th>
@@ -82,8 +83,8 @@
                     <th>카메라 명</th>
                     <th>채널</th>
                     <th>촬영 방향</th>
+                    <th>카메라 위치</th>
                     <th>좌표매칭</th>
-                    <th>수정일시</th>
                     <th>위경도 설정</th>
                   </tr>
                 </thead>
@@ -97,7 +98,7 @@
                     <td>1</td>
                     <td>북</td>
                     <td>설정</td>
-                    <td>2021.01.01 13:44:31</td>
+                    <td>설정</td>
                     <td>
                       <a href="#" class="ui secondary basic button c-gray-type2 rounded">이동</a>
                     </td>
@@ -111,7 +112,7 @@
                     <td>1</td>
                     <td>북</td>
                     <td>설정</td>
-                    <td>2021.01.01 13:44:31</td>
+                    <td>설정</td>
                     <td>
                       <a href="#" class="ui secondary basic button c-gray-type2 rounded">이동</a>
                     </td>
