--- a/base/html/cw/cw_camera_list.html
+++ b/base/html/cw/cw_camera_list.html
@@ -52,8 +52,9 @@
                   </select>
                 </div>
                 <!-- //selectbox-wrap -->
-                <div class="ui input md label-none">
-                  <input type="text" />
+                <!-- 231128 수정 -->
+                <div class="ui input md label-none" style="width: 280px">
+                  <input type="text" placeholder="카메라 ID 또는 카메라" />
                 </div>
                 <button type="button" class="btn-data-search">검색</button>
               </div>
