feat: 수정PPT(231130) 작업중 1. 공통: 검색 옆 입력 박스 너비 수정 2. 횡단 보도 통계 화면 작업 3. 브라우저 사이즈 변경시 좌우 스크롤 생기는 문제 수정

--- a/base/html/cw/cw_camera_list.html
+++ b/base/html/cw/cw_camera_list.html
@@ -53,7 +53,7 @@
                 </div>
                 <!-- //selectbox-wrap -->
                 <!-- 231128 수정 -->
-                <div class="ui input md label-none" style="width: 280px">
+                <div class="ui input md label-none">
                   <input type="text" placeholder="카메라 ID 또는 카메라" />
                 </div>
                 <button type="button" class="btn-data-search">검색</button>
