--- a/base/html/cw/cw_stats_main.html
+++ b/base/html/cw/cw_stats_main.html
@@ -37,7 +37,7 @@
               <i class="right angle icon divider"></i>
               <span class="section">통계</span>
               <i class="right angle icon divider"></i>
-              <div class="section">횡단보도 상세 통계</div>
+              <div class="section">횡단보도 통계</div>
             </div>
             <!-- //breadcrumb -->
             <div class="main-stats-container">
@@ -88,157 +88,167 @@
               <!-- //filter-grouop -->
 
               <section class="summary-info-wrap">
-                <em class="tit">횡단보도 통계 요약 정보</em>
+                <em class="tit">범지기마을</em>
                 <article class="summary-info-display">
-                  <em class="tit">범지기마을</em>
                   <ul class="summary-info-item-wrap">
                     <li>
                       <div class="bind">
                         <em class="tit">총 횡단자 수</em>
+                        <p class="clearly"><em>331,110</em> 명</p>
+                      </div>
+                      <div class="bind">
+                        <em class="tit">방향 별 횡단자 수</em>
+                        <div class="tbl-count">
+                          <table>
+                            <colgroup>
+                              <col style="width: 181px" />
+                              <col />
+                            </colgroup>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <span>천안브라운스톤아파트114동 1029호</span>
+                                </td>
+                                <td><em>220,555</em> 명</td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>화랑로</span>
+                                </td>
+                                <td><em>10,555</em> 명</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- //tbl-count -->
+                      </div>
+                    </li>
+                    <li>
+                      <div class="bind">
+                        <em class="tit">총 대기자 수</em>
                         <p class="clearly"><em>10,555</em> 명</p>
                       </div>
                       <div class="bind">
-                        <em class="tit">총 교통량</em>
-                        <p class="clearly"><em>3,300,555</em> 대</p>
+                        <em class="tit">방향 별 대기자 수</em>
+                        <div class="tbl-count">
+                          <table>
+                            <colgroup>
+                              <col style="width: 181px" />
+                              <col />
+                            </colgroup>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <span>천안브라운스톤아파트114동</span>
+                                </td>
+                                <td><em>11,265</em> 명</td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>화랑로</span>
+                                </td>
+                                <td><em>9,851</em> 명</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- //tbl-count -->
                       </div>
                     </li>
                     <li>
-                      <em class="tit">평균 속도</em>
-                      <p class="clearly"><em>25.23</em> km/h</p>
-                    </li>
-                    <!-- 230916 수정 : li에 클래스명 추가 및 테이블 수정 -->
-                    <li class="traffic-direction">
-                      <em class="tit">방향 별 교통량</em>
-                      <div class="tbl-bind">
-                        <table>
-                          <colgroup>
-                            <col style="width: 50%" />
-                            <col style="width: 50%" />
-                          </colgroup>
-                          <tbody>
-                            <tr>
-                              <th><span>도로명도로명도로명도</span></th>
-                              <td><span>(북동)</span><em>220,555</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th><span>가산디지털1로</span></th>
-                              <td><span>(동)</span><em>1,555</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th><span>화랑로</span></th>
-                              <td><span>(남)</span><em>65</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th><span>도로명도로명</span></th>
-                              <td><span>(북)</span><em>220,555</em> 대</td>
-                            </tr>
-                          </tbody>
-                        </table>
+                      <div class="bind">
+                        <em class="tit">총 무단횡단자 수</em>
+                        <p class="clearly"><em>555</em> 명</p>
+                      </div>
+                      <div class="bind">
+                        <em class="tit">방향 별 무단횡단자 수</em>
+                        <div class="tbl-count">
+                          <table>
+                            <colgroup>
+                              <col style="width: 181px" />
+                              <col />
+                            </colgroup>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <span>천안브라운스톤아파트114동</span>
+                                </td>
+                                <td><em>265</em> 명</td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>화랑로</span>
+                                </td>
+                                <td><em>851</em> 명</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- //tbl-count -->
                       </div>
                     </li>
                     <li>
-                      <em class="tit">차종 별 교통량</em>
-                      <div class="tbl-bind">
-                        <table>
-                          <!-- 230928: col width값 수정 -->
-                          <colgroup>
-                            <col style="width: 45%" />
-                            <col style="width: 55%" />
-                          </colgroup>
-                          <tbody>
-                            <tr>
-                              <th>소형</th>
-                              <td><em>555</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th>트럭</th>
-                              <td><em>1,233</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th>버스</th>
-                              <td><em>999,986</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th>트레일러</th>
-                              <td><em>105</em> 대</td>
-                            </tr>
-                            <tr>
-                              <th>이륜차</th>
-                              <td><em>595</em> 대</td>
-                            </tr>
-                          </tbody>
-                        </table>
+                      <div class="bind">
+                        <em class="tit">통과 차량 수</em>
+                        <p class="clearly"><em>51,515</em> 대</p>
+                      </div>
+                      <div class="bind">
+                        <em class="tit">방향 별 통과 차량 수</em>
+                        <div class="tbl-count">
+                          <table>
+                            <colgroup>
+                              <col style="width: 181px" />
+                              <col />
+                            </colgroup>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <span>천안브라운스톤아파트114동</span>
+                                </td>
+                                <td><em>26,599</em> 대</td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>화랑로</span>
+                                </td>
+                                <td><em>89,951</em> 대</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- //tbl-count -->
                       </div>
                     </li>
                     <li>
-                      <em class="tit">서비스 수준</em>
-                      <div class="tbl-bind">
-                        <table>
-                          <colgroup>
-                            <col style="width: 35%" />
-                            <col style="width: 65%" />
-                          </colgroup>
-                          <tbody>
-                            <tr>
-                              <td><em>A</em>(0)</td>
-                              <td><em>E</em>(4)</td>
-                            </tr>
-                            <tr>
-                              <td><em>B</em>(0)</td>
-                              <td><em>F</em>(4)</td>
-                            </tr>
-                            <tr>
-                              <td><em>C</em>(0)</td>
-                              <td><em>FF</em>(4)</td>
-                            </tr>
-                            <tr>
-                              <td><em>D</em>(0)</td>
-                              <td><em>FFF</em>(4)</td>
-                            </tr>
-                          </tbody>
-                        </table>
+                      <div class="bind">
+                        <em class="tit">정지선 위반 차량 수</em>
+                        <p class="clearly"><em>5,515</em> 대</p>
                       </div>
-                    </li>
-                    <li>
-                      <em class="tit">돌발 발생 건 수</em>
-                      <p class="clearly"><em>53,890</em> 건</p>
-                    </li>
-                    <li>
-                      <em class="tit">종류 별 돌발 발생 건 수</em>
-                      <div class="tbl-bind">
-                        <table>
-                          <!-- 231019 col 너비 수정 -->
-                          <colgroup>
-                            <col style="width: 58%" />
-                            <col style="width: 42%" />
-                          </colgroup>
-                          <tbody>
-                            <tr>
-                              <th>무단횡단</th>
-                              <td><em>1,860</em> 건</td>
-                            </tr>
-                            <tr>
-                              <th>정지</th>
-                              <td><em>50,843</em> 건</td>
-                            </tr>
-                            <tr>
-                              <th>역주행</th>
-                              <td><em>34,860</em> 건</td>
-                            </tr>
-                            <tr>
-                              <th>꼬리물기</th>
-                              <td><em>34,860</em> 건</td>
-                            </tr>
-                            <tr>
-                              <th>정지선 위반</th>
-                              <td><em>26,549</em> 건</td>
-                            </tr>
-                            <tr>
-                              <th>지정 차로 위반</th>
-                              <td><em>26,549</em> 건</td>
-                            </tr>
-                          </tbody>
-                        </table>
+                      <div class="bind">
+                        <em class="tit">방향 별 정지선 위반 차량 수</em>
+                        <div class="tbl-count">
+                          <table>
+                            <colgroup>
+                              <col style="width: 181px" />
+                              <col />
+                            </colgroup>
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <span>천안브라운스톤아파트114동</span>
+                                </td>
+                                <td><em>6,599</em> 대</td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>화랑로</span>
+                                </td>
+                                <td><em>8,951</em> 대</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- //tbl-count -->
                       </div>
                     </li>
                   </ul>
@@ -246,11 +256,11 @@
                 </article>
                 <!-- //summary-info-display -->
                 <article class="summary-info-chart">
-                  <section class="chart1">
+                  <section>
                     <div class="chart-container">
-                      <!-- 차트 크기 1031(px) x 364(px) -->
+                      <!-- 차트 크기 1542(px) x 341(px) -->
                       <img
-                        src="https://www.dummyimage.com/1031x364/f9f9f9/000.png&amp;text=Chart+Area"
+                        src="https://www.dummyimage.com/1542x341/f9f9f9/000.png&amp;text=Chart+Area"
                         alt="퍼블리싱 확인용 더미 이미지"
                         class="dummy-img"
                       />
@@ -266,42 +276,16 @@
                       </div>
                       <!-- //selectbox-wrap -->
                       <div class="road-sort">
-                        <button type="button" class="active">차로 별 통행량</button>
-                        <button type="button">차로 별 점유율</button>
-                        <button type="button">차로 별 대기행렬</button>
+                        <button type="button" class="active">횡단자 수</button>
+                        <button type="button">대기자 수</button>
+                        <button type="button">무단횡단자 수</button>
+                        <button type="button">통과 차량</button>
+                        <button type="button">정지선 위반 차량</button>
                       </div>
                       <!-- //road-sort -->
                     </aside>
                   </section>
-                  <!-- //chart1 -->
-
-                  <section class="chart2">
-                    <header class="tit-header">
-                      <em>종류별 돌발 발생 건 수</em>
-                      <div class="selectbox-wrap xs">
-                        <select>
-                          <option value="">도로명</option>
-                          <option value="">도로명2</option>
-                          <option value="">도로명3</option>
-                        </select>
-                      </div>
-                      <!-- //selectbox-wrap -->
-                    </header>
-                    <div class="chart-container">
-                      <!-- 230920 div 추가 -->
-                      <div class="chart-inner">
-                        <!-- 차트 크기 320(px) x 320(px) -->
-                        <img
-                          src="https://www.dummyimage.com/320x320/f9f9f9/000.png&amp;text=Chart+Area"
-                          alt="퍼블리싱 확인용 더미 이미지"
-                          class="dummy-img"
-                        />
-                      </div>
-                      <!-- //chart-inner -->
-                    </div>
-                    <!-- //chart-container -->
-                  </section>
-                  <!-- //chart2 -->
+                  <!-- //section -->
                 </article>
                 <!-- //summary-info-chart -->
               </section>
