--- a/base/html/cw/facility_manag.html
+++ b/base/html/cw/facility_manag.html
@@ -53,7 +53,7 @@
                 </div>
                 <!-- //selectbox-wrap -->
                 <!-- 231128 추가 -->
-                <div class="ui input md label-none" style="width: 280px">
+                <div class="ui input md label-none">
                   <input type="text" placeholder="시설물 ID 또는 시설물" />
                 </div>
                 <button type="button" class="btn-data-search">검색</button>
