feat: 횡단보도: 비교 통계 및 원시 이력 화면 작업 - 비교 지점 선택 및 Excel Down 검색 조건 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -2449,7 +2449,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/cw_stats_comparison.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -2463,7 +2463,7 @@
                           <td class="col-type" data-type="모달 팝업"></td>
                           <td class="col-url">html/cw/cw_comparison_popup.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -2477,7 +2477,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/cw_stats_primitive.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -2491,7 +2491,7 @@
                           <td class="col-type" data-type="모달 팝업"></td>
                           <td class="col-url">html/cw/cw_primitive_popup.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
