--- a/base/html/cw/cw_comparison_popup.html
+++ b/base/html/cw/cw_comparison_popup.html
@@ -12,11 +12,10 @@
     <script src="/base/js/common/includeHTML.js"></script>
     <script src="/base/js/common/ui.js"></script>
     <link rel="stylesheet" href="/base/css/common.css" />
-    <link rel="stylesheet" href="/base/css/is.css" />
+    <link rel="stylesheet" href="/base/css/cw.css" />
   </head>
   <body>
     <div id="ex" class="modal">
-      <!-- 231202 w682클래스명으로 변경 -->
       <div class="modal-container w682">
         <div class="modal-header">
           <span class="tit">비교 지점 선택</span>
