feat: 횡단보도 상세 화면 작업 1. 횡단보도 상세(분할 화면 4개) 작업 2. 영상인식 상세 설정 팝업 작업 3. 인식 SW 팝업 작업

--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1850,7 +1850,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/map_cw_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1878,7 +1878,7 @@
                           <td class="col-type" data-type="모달 팝업"></td>
                           <td class="col-url">html/cw/image_reco_set.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1887,12 +1887,12 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">팝업 상세</td>
+                          <td class="col-4depth">인식 SW</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달 팝업"></td>
-                          <td class="col-url">html/cw/image_reco_view.html</td>
+                          <td class="col-url">html/cw/reco_sw.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
